--- a/main.html
+++ b/main.html
@@ -7,9 +7,61 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<form action="#" method="post">
+    <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Name" required>
+    </div>
+    <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Email" required>
+    </div>
+    <div>
+        <fieldset>
+            <legend>Gender:</legend>
+            <input type="radio" id="gender_m" name="gender" required>
+            <label for="gender_m">Male</label>
+            <input type="radio" id="gender_f" name="gender" required>
+            <label for="gender_f">Female</label>
+        </fieldset>
+    </div>
+    <div>
+        <label for="cars">Car Brands:</label>
+        <select id="cars" name="cars" required>
+            <option value="" disabled selected>--Please choose an option--</option>
+            <option value="Toyota">Toyota</option>
+            <option value="Honda">Honda</option>
+            <option value="Ford">Ford</option>
+            <option value="Chevrolet">Chevrolet</option>
+            <option value="BMW">BMW</option>
+        </select>
+    </div>
+    <div>
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age" placeholder="Age" required>
+    </div>
+    <div>
+        <label for="dob">DOB:</label>
+        <input type="date" id="dob" name="dob" required>
+    </div>
+    <div>
+        <label for="tel">Phone Number:</label>
+        <input type="tel" id="tel" name="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+        <small>Format: xxx-xxx-xxxx</small>
+    </div>
+    <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+    </div>
+    <div>
+        <input type="checkbox" id="tos" name="tos" required>
+        <label for="tos">I agree to the TOS</label>
+    </div>
+    <div>
+        <button type="submit">Submit</button>
+    </div>
+</form>
+
 
 </body>
 
